--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,30 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+.texture-selector{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #aaa;
+  padding: 16px;
+  border: 5px solid #000;
+  display: flex;
+  gap: 16px;
+}
+
+.texture-selector.hidden {
+  display: none;
+}
+
+.texture-selector img{
+  width: 90px;
+  z-index: 100;
+  image-rendering: pixelated;
+  border: 3px solid #000;
+}
+
+.texture-selector img.selected{
+  border-color: red;
+}
